syntax = "proto3";

import "google/protobuf/empty.proto";

package pb;

option go_package = "/pb";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (google.protobuf.Empty) {}
  rpc GetUser(GetUserRequest) returns (User) {}
  rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty) {}
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty) {}
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse) {}
}

message User {
  string id = 1;
  string username = 2;
  string password = 3; // Предполагается, что пароль может быть пустым
  string created_at = 4;
  string updated_at = 5;
}

message CreateUserRequest {
  string id = 1;
  string username = 2;
  string password = 3; // Предполагается, что пароль может быть пустым
}

message GetUserRequest {
  string id = 1;
}

message UpdateUserRequest {
  string id = 1;
  string username = 2;
  string password = 3; // Предполагается, что пароль может быть пустым
}

message DeleteUserRequest {
  string id = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}
